[project]
name = "retrieval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "openai>=2.15.0",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
]
